WIP make buttons more visible

--- a/web_app/templates/admin/custom_list.html
+++ b/web_app/templates/admin/custom_list.html
@@ -367,8 +367,8 @@
         
         <!-- Floating Save Button -->
         <form id="floating-save-form" method="POST" class="floating-save-btn">
-            <button type="submit" class="btn btn-sm btn-primary me-2" style="color: green">Save</button>
-            <button type="button" id="cancel-btn" class="btn btn-sm btn-secondary" style="color: red">Cancel</button>
+            <button type="submit" class="btn btn-sm btn-primary me-2" style="background-color: green">Save</button>
+            <button type="button" id="cancel-btn" class="btn btn-sm btn-secondary" style="background-color: red">Cancel</button>
         </form>        
 
         <!-- Flash Messages -->
