WIP pagination display tweak

--- a/web_app/templates/admin/custom_list.html
+++ b/web_app/templates/admin/custom_list.html
@@ -282,7 +282,7 @@
         </div>
         
         {% if not pagination.is_large_dataset %}
-        <div class="pagination mb-3">
+        <div class="pagination mb-3" style="top: -20px;position: relative;">
             {% if pagination.has_prev %}
             <button type="button" class="btn btn-outline-primary" onclick="handleJump(this)" data-tooltip="Go to the first page">
                 First
