WIP fix focus issue

--- a/web_app/templates/admin/custom_list.html
+++ b/web_app/templates/admin/custom_list.html
@@ -457,6 +457,7 @@ document.addEventListener('DOMContentLoaded', function () {
             r.querySelectorAll('input').forEach(i => {
                 i.disabled = false;
                 i.classList.remove('unsaved');
+                i.blur();
             });
         });
     }
